--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     ></script>
 
     <!-- 讓不支援 dialog 的瀏覽器能夠模擬顯示-->
-    <link
+<!--     <link
       rel="stylesheet"
       href="https://unpkg.com/dialog-polyfill@0.5.6/dialog-polyfill.css"
     />
-    <script src="https://unpkg.com/dialog-polyfill@0.5.6/dialog-polyfill.min.js"></script>
+    <script src="https://unpkg.com/dialog-polyfill@0.5.6/dialog-polyfill.min.js"></script> -->
     
     <title>Desserts Shopping Cart</title>
   </head>
